fix grid layout on narrow screens

--- a/components/reader-list/reader-thumbnail/styles.module.css
+++ b/components/reader-list/reader-thumbnail/styles.module.css
@@ -3,6 +3,7 @@
 
 .cover{
     position: relative;
+    padding-top: 146%;
 }
 
 .cover > *{
